Adding database and images

--- a/BBScoreboard.WebApp/_SiteLayout.cshtml
+++ b/BBScoreboard.WebApp/_SiteLayout.cshtml
@@ -106,7 +106,7 @@
 
         @if (Page.Title == "Dashboard")
         {
-            <img src="~/assets/img/bbscoreboardbanner.jpg" class="img-responsive" />
+            <img src="~/assets/img/bbscoreboardbanner.png" class="img-responsive" />
             <div class="page-header">
                 <h1>@appName <small>@Page.Title</small></h1>
             </div>
